<resources>
    <string name="app_name">But first, coffee!</string>
    <string name="welcome_please_select_your_coffee_configuration">Welcome! Please select your coffee configuration</string>
    <string name="espresso">Espresso</string>
    <string name="coffeeItem">Drip Coffee</string>
    <string name="cappuccino">Cappuccino</string>
    <string name="regular">Regular</string>
    <string name="double_double">Double double</string>
    <string name="send_my_order">Add to order!</string>
    <string name="black">Black</string>
    <string name="select_your_coffee_style">How do you like your coffeeItem?</string>
    <string name="small">Small</string>
    <string name="large">Large</string>
    <string name="select_your_size">Select your size</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="view_orders">View Orders</string>
</resources>