<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_coffee_config"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/welcome_please_select_your_coffee_configuration"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_coffee_type_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:textSize="16dp"
        android:text="Coffee Type"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_coffee_config" />


    <RadioGroup
        android:id="@+id/rg_coffee_types"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_coffee_type_prompt">

        <RadioButton
            android:id="@+id/rb_espresso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/espresso"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/rb_coffee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coffeeItem"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/rb_cappuccino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cappuccino"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <TextView
        android:id="@+id/tv_coffee_style_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:textStyle="italic"
        android:text="@string/select_your_coffee_style"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/rg_coffee_style"
        app:layout_constraintStart_toStartOf="parent"
         />

    <RadioGroup
        android:id="@+id/rg_coffee_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rg_coffee_types"
        >

        <RadioButton
            android:id="@+id/rb_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/black"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/rb_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/regular"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/rb_double"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/double_double"
            android:onClick="onRadioButtonClicked"/>

    </RadioGroup>

    <TextView
        android:id="@+id/tv_coffee_size_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:textStyle="italic"
        android:text="@string/select_your_size"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/rg_coffee_size"
        app:layout_constraintStart_toStartOf="parent"
        />

    <RadioGroup
        android:id="@+id/rg_coffee_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rg_coffee_style"
        >

        <RadioButton
            android:id="@+id/rb_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/small"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/rb_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/regular"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/rb_large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/large"
            android:onClick="onRadioButtonClicked"/>

    </RadioGroup>

    <TextView
        android:id="@+id/tv_quantity_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:textStyle="italic"
        android:text="Got friends? How many?"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/rg_quantity"
        app:layout_constraintStart_toStartOf="parent"
        />

    <RadioGroup
        android:id="@+id/rg_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rg_coffee_size"
        >

        <RadioButton
            android:id="@+id/one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_1"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_2"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_3"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_4"
            android:onClick="onRadioButtonClicked"/>

    </RadioGroup>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/send_my_order"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rg_quantity" />


</androidx.constraintlayout.widget.ConstraintLayout>
